package de.envite.greenbpm.schulung.referenzimplementierung.bestellung.domain.model;

public enum Status {
  ANGELEGT,
  GENEHMIGT,
  BESTELLT,
  AUSGELIEFERT,
  STORNIERT
}
